--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API para manter o consentimento",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --forceExit",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,10 +18,11 @@
   },
   "homepage": "https://github.com/grupojavafiap/consents-api#readme",
   "dependencies": {
-    "expressjs": "^1.0.1"
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "jest": "^29.5.0",
+    "jest": "^27.0.0",
     "supertest": "^6.3.3"
   }
 }
